# powerbi-docs-extractor

./: .env-example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app_new/: dax_info_queries.dax  extract_dax_info_tables.py  extract_powerbi_api.py  loader.py  main.py  transformer.py
dax_queries/: calc_groups_info.txt  columns_info.txt  measures_info.txt  relationships_info.txt  tables_info.txt
docs/: docs.md
powerbi_report/: Power BI Data Catalog (Template).pbit  Power BI Data Catalog.pbit
report_template/: Power BI Catalog (Template).pbit  Power BI Data Catalog (Template).pbit
src/: azure_app_token.py  datasets.py  dax_info_queries.dax  dax_studio_functions.py  dax_studio_setup.py  etl.py  etl_old.py  etl_pbi.py  etl_pbi_info.py  extract_dax_info_tables.py  extract_pbi_dataset_info.py  extract_pbi_objects.py  extract_powerbi_api.py  extractor.py  extractor_powerbi.py  extractor_powerbi_api.py  functions_dax_studio.py  functions_powerbi_api.py  get_datasets.py  get_pbi_dataset_info.py  get_pbi_objects.py  loader.py  main.py  measures_info.py  microsoft_access_token.py  pipeline.py  powerbi_api_functions.py  powerbi_rest_api.py  setup_dax_studio.py  sharepoint_loader.py  transform.py  transformer.py  utils.py
src/dax_queries/: columns_info.txt  measures_info.txt  relationships_info.txt  tables_info.txt
src/interface/: powerbi_api.py
template/: Data Catalog Report.pbit
