[tool.poetry]
name = "pbi-data-catalog"
version = "0.1.0"
description = ""
authors = ["lamorasjr <lamorasjr@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
